# internal/gateways/rest/routes.go
@@ -19,6 +19,8 @@ func (s *Server) endpoints() {
 
 		v1.POST("/otp/send", s.SendOTP())
 		v1.POST("/otp/verify", s.VerifyOTP())
+
+		v1.POST("/media", s.UploadMedia())
 	}
 
 	admin := v1.Group("/admin", s.adminAuth())
